--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -23,18 +24,26 @@
     <!-- Add your site or application content here -->
     <div class="container">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+        <ul class="nav nav-pills pull-left">
+          <li class="active"><a ng-href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+          <li><a ng-href="#/products"><span class="glyphicon glyphicon-th-large"></span></a></li>
         </ul>
-        <h3 class="text-muted">shoppingCart</h3>
+        
+        <ul class="nav nav-pills pull-right">
+          <li><a ng-href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span> 0</a></li>
+          <li><a ng-href="#/about"><span class="glyphicon glyphicon-phone-alt"></span></a></li>
+        </ul>
+        <h3 class="text-muted">Shopping Cart Sample</h3>
       </div>
 
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p> 
+          <span class="glyphicon glyphicon-heart"></span>
+          <img src="images/yeoman.png" alt="Yeoman team" width="50px" >
+          <span class="glyphicon glyphicon-heart"></span>
+       </p>
       </div>
     </div>
 
@@ -77,6 +86,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/products.js"></script>
+        <script src="scripts/controllers/productdetail.js"></script>
+        <script src="scripts/services/products.list.js"></script>
+        <script src="scripts/services/productservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
