Product controller and service updated

--- a/test/index.html
+++ b/test/index.html
@@ -54,7 +54,7 @@
         <script src="../app/scripts/controllers/products.js"></script>
         <script src="../app/scripts/controllers/productdetail.js"></script>
         <script src="../app/scripts/services/products.list.js"></script>
-        <script src="../app/scripts/services/productservice.js"></script>
+        <script src="../app/scripts/services/products.js"></script>
         <!-- endbuild -->
 
         <script src="../app/bower_components/jasmine/lib/jasmine-core/json2.js"></script>
@@ -71,7 +71,7 @@
         <script src="spec/controllers/products.js"></script>
         <script src="spec/controllers/productdetail.js"></script>
         <script src="spec/services/products.list.js"></script>
-        <script src="spec/services/productservice.js"></script>
+        <script src="spec/services/products.js"></script>
 
 </body>
 </html>
